Atualizações do Swagger
